syntax = "proto3";
package rook.game;

import "rook/game/game.proto";
import "rook/game/config.proto";

option go_package = "github.com/rook-network/rook/x/game/types";

// FIXME: These events are currently not used because they add "" to each
// field and make it difficult to parse and query. Vanilla events are used
// instead.

message EventNewGame {
  uint64 game_id = 1;
  repeated string players = 2;
  Config config = 3;
  uint32 params_version = 4;
}

message EventUpdateGame {
  uint64 game_id = 1;
  State state = 2;
}